<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/surfaceColor">

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Question"
        android:textSize="50sp"
        android:textColor="@color/inverseSurfaceColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/text_to_speech_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/volume"
        android:contentDescription="Question Reader"
        app:layout_constraintStart_toEndOf="@+id/question_title"
        app:layout_constraintTop_toTopOf="@id/question_title"
        app:layout_constraintBottom_toBottomOf="@id/question_title"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="Next"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:onClick="onNextButtonClick"
        android:visibility="gone"
        android:background="@drawable/quiz_answer_outline_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_to_speech_button"
        app:layout_constraintStart_toStartOf="@id/image_view_right_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_view_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_view_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <com.example.brainboosters.accessibility.AccessibleZoomImageView
        android:id="@+id/picture_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@id/image_view_left_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_right_guideline"
        app:layout_constraintTop_toBottomOf="@id/question_title"
        app:layout_constraintBottom_toTopOf="@id/answer_1_button"/>

    <Button
        android:id="@+id/answer_1_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="answer1"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:background="@drawable/quiz_answer_outline_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/answer_3_button"/>

    <Button
        android:id="@+id/answer_2_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="answer2"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:background="@drawable/quiz_answer_outline_default"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answer_4_button"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/answer_3_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="answer3"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:background="@drawable/quiz_answer_outline_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/answer_4_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="answer4"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:background="@drawable/quiz_answer_outline_default"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/draggable_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_title" />

    <Button
        android:id="@+id/submit_order_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="Confirm Order"
        android:textSize="30sp"
        android:textColor="@color/inverseSurfaceColor"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/quiz_answer_outline_default"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/image_view_left_guideline"
        app:layout_constraintTop_toBottomOf="@id/draggable_image_container"
        app:layout_constraintEnd_toEndOf="@id/image_view_right_guideline"/>


</androidx.constraintlayout.widget.ConstraintLayout>