<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/preview_answer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:padding="8dp" />

    <Button
        android:id="@+id/select_answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Answer"
        android:textSize="55sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Go Back"
        android:textSize="55sp"
        android:layout_marginTop="8dp"/>
</LinearLayout>